--- a/03.html
+++ b/03.html
@@ -17,8 +17,10 @@
   let max = arr[0]
   let min = arr[0]
   for (let i = 0; i < arr.length; i++) {
-    max = arr[i] > max ? arr[i] : max
-    min = arr[i] < min ? arr[i] : min
+    // max = arr[i] > max ? arr[i] : max
+    max = Math.max(arr[i], max)
+    // min = arr[i] < min ? arr[i] : min
+    min = Math.min(arr[i], min)
   }
   document.write(`数组 [${arr}] 的最大值是${max},最小值是${min}`)
 </script>
