--- a/07.html
+++ b/07.html
@@ -13,16 +13,31 @@
 <script>
   // 7. 请编写一段逻辑将包含嵌套数组的数组处理后返回一个新数组，其中所有元素都被扁平化到同一层级。
   // 例子: [1, [2, [3]]] => [1, 2, 3]
-  let arr = [4, [5, 6], [7, 8], [9, 10], [1, [2, 3, [4, 5, [6, 7, [8, 9]]]]]]
-  let newArr = []
-  for (let i = 0; i < arr.length; i++) {
-    if (typeof arr[i] === "number") {
-      newArr.push(arr[i])
-    } else {
-      arr.push(...arr[i])
+  // let arr = [4, [5, 6], [7, 8], [9, 10], [1, [2, 3, [4, 5, [6, 7, [8, 9]]]]]]
+  // let newArr = []
+  // for (let i = 0; i < arr.length; i++) {
+  //   if (typeof arr[i] === "number") {
+  //     newArr.push(arr[i])
+  //   } else {
+  //     arr.push(...arr[i])
+  //   }
+  // }
+  // document.write(`数组 [4, [5, 6], [7, 8], [9, 10], [1, [2, 3, [4, 5, [6, 7, [8, 9]]]]]] 的扁平化变为 [${newArr}] <br>`)
+  function flatArray(array) {
+    // 广度优先遍历
+    let res = []
+    for (let i = 0; i < array.length; i++) {
+      if (Array.isArray(array[i])) {
+        for (let j = 0; j < array[i].length; j++) {
+          array.push(array[i][j])
+        }
+      } else {
+        res.push(array[i])
+      }
     }
+    return res
   }
-  document.write(`数组 [4, [5, 6], [7, 8], [9, 10], [1, [2, 3, [4, 5, [6, 7, [8, 9]]]]]] 的扁平化变为 [${newArr}] `)
+  document.write(`数组 [4, [5, 6], [7, 8], [9, 10], [1, [2, 3, [4, 5, [6, 7, [8, 9]]]]]] 的扁平化变为 [${flatArray(arr)}] `)
 </script>
 
 </html>
