--- a/11.html
+++ b/11.html
@@ -15,7 +15,7 @@
 </body>
 <script>
 
-  let arr = [1, 2, 3, 4, 5, 6, 7, 8, 9]
+  let arr = [1, 2, 2, 2, 3, 4, 5, 6, 7, 8, 9]
   let target = +prompt('数组[1, 2, 3, 4, 5, 6, 7, 8, 9],给定任意一个数字,找出数组两个元素之和等于这个数字的下标数组')
   document.write(`数组[1, 2, 3, 4, 5, 6, 7, 8, 9]，输入数字${target}<br>`)
   for (let i = 0; i < arr.length; i++) {
